[package]
name = "yee"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtra = {version="0.5.1", features=["with-tokio-1"]}
tokio = {version = "1.7.1", features=["full"]}
async-trait = "0.1.50"
tokio-stream = "0.1.6"
warp = "0.3.1"
futures = "0.3.15"
uuid = {version = "0.8.2", features=["v4"]}
serde = "1.0.126"
serde_json = "1.0.64"
pretty_env_logger = "0.4.0"
